--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -58,11 +58,12 @@ $nav-shadow: rgba(255, 255, 255, 0.2);
     max-height: 3rem;
     width: 2.4rem;
     margin-right: 0.5rem;
-    -webkit-filter: drop-shadow(0 0 0 $highlight) drop-shadow(0 0 0 $highlight)
-      drop-shadow(0 0 0 $highlight) drop-shadow(0 0 0 $highlight);
+    -webkit-filter: drop-shadow(1px 1px 0 $highlight)
+      drop-shadow(-1px 1px 0 $highlight) drop-shadow(1px -1px 0 $highlight)
+      drop-shadow(-1px -1px 0 $highlight);
 
-    filter: drop-shadow(0 0 0 $highlight) drop-shadow(0 0 0 $highlight)
-      drop-shadow(0 0 0 $highlight) drop-shadow(0 0 0 $highlight);
+    filter: drop-shadow(1px 1px 0 $highlight) drop-shadow(-1px 1px 0 $highlight)
+      drop-shadow(1px -1px 0 $highlight) drop-shadow(-1px -1px 0 $highlight);
   }
   .project {
     border-radius: 0;
@@ -268,14 +269,14 @@ $nav-shadow: rgba(255, 255, 255, 0.2);
   .project {
     display: block;
     padding: 0% 5%;
-    .screenshot-wrapper {
-      padding: 0;
-      .browser-screenshot,
-      .system-screenshot {
-        -webkit-box-shadow: 0 -0.1rem 0.5rem $project-shadow;
-        box-shadow: 0 -0.1rem 0.5rem $project-shadow;
-      }
-    }
+    // .screenshot-wrapper {
+    //   padding: 0;
+    //   .browser-screenshot,
+    //   .system-screenshot {
+    //     -webkit-box-shadow: 0 -0.1rem 0.5rem $project-shadow;
+    //     box-shadow: 0 -0.1rem 0.5rem $project-shadow;
+    //   }
+    // }
   }
 }
 
